override.tf
resource "aws_instance" "terraform" {
  ami               = "custom.ami"
  instance_type     = "t2.micro"
  availability_zone = var.A-Z

  tags = {
    Name = "HelloWorld"
  }
}
